@@ -6,7 +6,7 @@
 	# See the README and LICENSE files for details
 
 	# --------------------------------------------------------
-	# $Id: bugnote_add.php,v 1.36 2003-02-15 10:25:16 jfitzell Exp $
+	# $Id: bugnote_add.php,v 1.37 2003-02-20 02:49:31 vboctor Exp $
 	# --------------------------------------------------------
 ?>
 <?php
@@ -34,5 +34,5 @@
 		bugnote_add( $f_bug_id, $f_bugnote_text, $f_private );
 	}
 
-	print_header_redirect_view( $f_bug_id );
+	print_success_and_redirect( $f_bug_id );
 ?>
